# math-optim_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci.yml  rust-docs.yml  verify.yml
src/: lib.rs  utils.rs
src/algebra/: group.rs  mod.rs  monoid.rs  monoid_action.rs  monoid_impl.rs
src/data_structure/: dsu.rs
src/ds/: lazy_segtree.rs  mod.rs  potential_dsu.rs  segtree.rs
src/geometry/: angle.rs  convex_hull.rs  mod.rs  polygon.rs  vector_2d.rs
src/graph/: mod.rs  scc.rs
src/graph/tree/: diameter.rs
src/math/: gcd.rs  gf.rs  gf_comb.rs  integer.rs  mod.rs  modint.rs  prime.rs
src/math/conv/: mod.rs  ntt.rs
src/seq/: char_position.rs  mod.rs  run_length.rs
verify/: Cargo.toml  Makefile.toml  README.md
